--- a/KnockBackFFA_GitHub/src/config.yml
+++ b/KnockBackFFA_GitHub/src/config.yml
@@ -24,7 +24,7 @@ Title:
     Header: ""
     Footer: ""
 ##############################################################
-Tablis:
+Tablist:
     Header: ""
     Footer: ""
 ##############################################################
