--- a/KnockBackFFA_GitHub/src/config.yml
+++ b/KnockBackFFA_GitHub/src/config.yml
@@ -45,7 +45,8 @@ Tablist:
     Footer: ""
 ##############################################################
 Scoreboard:
-    Title: ""
+    Title: "test"
+    ScoreTS: "&6YourServer.net"
 ##############################################################
 MySQL:
     Username: "root"
