--- a/KnockBackFFA_GitHub/src/config.yml
+++ b/KnockBackFFA_GitHub/src/config.yml
@@ -1,7 +1,9 @@
 ##############################################################
 # KnockBackFFA
 # Created by BungeeDev aka MrCookieWarrior
-# Development begin on 01.04.17
+# Development begin on 04.04.17
+# Development Finished on 04.04.17
+# Development time 2Hours
 # The support of the developer is unfortunately only in German
 # Support on TeamSpeak ceriox.de
 # Minecraft version tested on 1.8 and 1.9
