--- a/KnockBackFFA_GitHub/nbproject/project.properties
+++ b/KnockBackFFA_GitHub/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/KnockBackFFA_GitHub.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.PermissionsEx-1.23.4.jar=C:\\Users\\DieSeNse14\\Desktop\\Server Netzwerke\\CerioxDE\\Sicherrungen\\29.03.17\\lobby\\plugins\\PermissionsEx-1.23.4.jar
+file.reference.PermissionsEx-1.23.4.jar-1=C:\\PermissionsEx-1.23.4.jar
+file.reference.spigot-1.8.8.jar=C:\\spigot-1.8.8.jar
 file.reference.spigot.jar=C:\\Users\\DieSeNse14\\Desktop\\Server Netzwerke\\CerioxDE\\Sicherrungen\\29.03.17\\lobby\\spigot.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.spigot.jar}:\
-    ${file.reference.PermissionsEx-1.23.4.jar}
+    ${file.reference.PermissionsEx-1.23.4.jar}:\
+    ${file.reference.PermissionsEx-1.23.4.jar-1}:\
+    ${file.reference.spigot-1.8.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
